<resources>
    <string name="app_name">医路有你</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">ICON</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号（手机号）</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="error_invalid_email">无效的账号</string>
    <string name="error_invalid_password">密码格式有误</string>
    <string name="error_incorrect_password">账号或密码有误</string>
    <string name="error_field_required">请输入账号</string>
    <string name="permission_rationale">"未获得联网权限！"</string>

    <string name="main_menu_index">首页</string>
    <string name="main_menu_consult">会诊室</string>
    <string name="main_menu_medicine">寻医问药</string>
    <string name="main_menu_private_doc">私人医生</string>

    <!-- pager -->
    <string name="pager_focus">关注</string>
    <string name="pager_patient_exper">久病良医</string>
    <string name="pager_famous_doc">名医案例</string>
    <string name="pager_recommend">推荐</string>
    <string name="pager_community">社区交流</string>

    <!-- navigation menu -->
    <string name="nav_menu_my_keep">我的收藏</string>
    <string name="nav_menu_visited">浏览记录</string>
    <string name="nav_menu_my_article">我的文章</string>
    <string name="nav_menu_my_health_document">健康文档</string>
    <string name="nav_menu_my_consult_record">会诊记录</string>
    <string name="nav_menu_my_health_manage">健康管理</string>
    <string name="nav_menu_my_relate_account">亲情账号</string>

    <string name="emergency">紧急呼救</string>
    <string name="hint">提示</string>

    <!-- exit -->
    <string name="exit_hint">你确定要退出医路有你吗</string>
    <string name="cancel">取消</string>
    <string name="exit">退出</string>
    <string name="confirm">确定</string>

    <!-- medicine -->
    <string name="marking">评分:</string>
    <string name="d24h_reply">24小时回复率:</string>
    <string name="hot_level">推荐热度(综合):</string>
    <string name="medicine_more">查看更多</string>
    <string name="medicine_famous_doctor">名医达人</string>
    <string name="medicine_illness">疾病分类</string>
    <string name="medicine_query">咨询</string>
    <string name="medicine_focus">关注</string>
    <string name="medicine_recipe">开处方</string>
    <string name="medicine_plan">医疗方案</string>
    <string name="medicine_consult">添加到会诊室</string>
    <string name="medicine_pri_add">添加为私人医生</string>
    <string name="medicine_profess">专业擅长</string>
    <string name="medicine_career">执业经历</string>
    <string name="medicine_pri">私人医生</string>

    <!-- consult -->
    <string name="doctor">医生</string>
    <string name="illness">疾病</string>
    <string name="send">发送</string>
    <string name="begin_consult">发起会诊</string>
    <string name="describe">病情描述</string>
    <string name="describe_hint">在此输入病情描述</string>
    <string name="blank_doctor_list">邀请医生</string>
    <string name="blank_data_list">添加资料</string>
    <string name="consult_doc_title">医生列表</string>
    <string name="consult_data_title">提交材料</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">ChatActivity</string>

</resources>
