<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none"
        android:id="@+id/group_user">

        <item
            android:id="@+id/nav_menu_my_keep"
            android:icon="@drawable/ic_nav_keep"
            android:title="@string/nav_menu_my_keep" />

        <item
            android:id="@+id/nav_menu_visited"
            android:icon="@drawable/ic_nav_visited"
            android:title="@string/nav_menu_visited" />

        <item
            android:id="@+id/nav_menu_my_article"
            android:icon="@drawable/ic_nav_article"
            android:title="@string/nav_menu_my_article" />

        <item
            android:id="@+id/nav_menu_my_health_document"
            android:icon="@drawable/ic_nav_document"
            android:title="@string/nav_menu_my_health_document" />

        <item
            android:id="@+id/nav_menu_my_consult_record"
            android:icon="@drawable/ic_nav_consult"
            android:title="@string/nav_menu_my_consult_record" />

        <item
            android:id="@+id/nav_menu_my_health_manage"
            android:icon="@drawable/ic_nav_manage"
            android:title="@string/nav_menu_my_health_manage" />

        <item
            android:id="@+id/nav_menu_my_relate_account"
            android:icon="@drawable/ic_nav_relate"
            android:title="@string/nav_menu_my_relate_account" />
    </group>

    <!--<item android:title="关于">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
