<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGray"
    tools:context=".ShowDoctorActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_show_doc"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_show_doc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_show_doc">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- 上半部分背景 -->
            <TextView
                android:id="@+id/text_view_show_doc_tp"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:background="@color/colorGrayBlue"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- 下半部分背景 -->
            <TextView
                android:id="@+id/text_view_show_doc_bt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/scroll_view_show_doc_function"
                app:layout_constraintTop_toBottomOf="@+id/text_view_show_doc_tp"/>

            <ImageView
                android:id="@+id/image_view_show_doc_icon"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginTop="@dimen/mid_border"
                app:srcCompat="@drawable/ic_doctor_male"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/text_view_show_doc_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_view_show_doc_icon" />

            <TextView
                android:id="@+id/text_view_show_doc_hospital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_show_doc_name" />

            <LinearLayout
                android:id="@+id/layout_show_doc_level1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_border"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/text_view_show_doc_hospital">

                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_level" />
                <TextView
                    android:id="@+id/text_view_show_doc_hot"
                    android:textColor="@color/red"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_show_doc_level2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/layout_show_doc_level1">

                <TextView
                    android:text="@string/d24h_reply"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/text_view_show_doc_24h"
                    android:textSize="18sp"
                    android:textColor="@color/red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small_border" />

                <TextView
                    android:layout_marginStart="@dimen/small_border"
                    android:text="@string/marking"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/text_view_show_doc_marking"
                    android:textSize="18sp"
                    android:textColor="@color/red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <HorizontalScrollView
                android:id="@+id/scroll_view_show_doc_function"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/small_border"
                android:paddingStart="@dimen/small_border"
                android:paddingBottom="@dimen/small_border"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_show_doc_level2">

                <LinearLayout
                    android:id="@+id/layout_show_doc_function"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_border"
                    android:paddingTop="@dimen/mini_border"
                    android:paddingBottom="@dimen/mini_border"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_view_show_doc_query"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_marginEnd="@dimen/nano_border"
                        android:layout_marginStart="@dimen/nano_border"
                        android:background="@drawable/shape_for_show_doc_function_red"
                        android:paddingBottom="@dimen/mini_border"
                        android:paddingEnd="@dimen/small_border"
                        android:paddingStart="@dimen/small_border"
                        android:paddingTop="@dimen/mini_border"
                        android:text="@string/medicine_query"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/text_view_show_doc_focus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_marginEnd="@dimen/nano_border"
                        android:layout_marginStart="@dimen/nano_border"
                        android:background="@drawable/shape_for_show_doc_function_green"
                        android:paddingBottom="@dimen/mini_border"
                        android:paddingEnd="@dimen/small_border"
                        android:paddingStart="@dimen/small_border"
                        android:paddingTop="@dimen/mini_border"
                        android:text="@string/medicine_focus"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/text_view_show_doc_recipe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_marginEnd="@dimen/nano_border"
                        android:layout_marginStart="@dimen/nano_border"
                        android:background="@drawable/shape_for_show_doc_function_blue"
                        android:paddingBottom="@dimen/mini_border"
                        android:paddingEnd="@dimen/small_border"
                        android:paddingStart="@dimen/small_border"
                        android:paddingTop="@dimen/mini_border"
                        android:text="@string/medicine_recipe"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/text_view_show_doc_plan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_marginEnd="@dimen/nano_border"
                        android:layout_marginStart="@dimen/nano_border"
                        android:background="@drawable/shape_for_show_doc_function_orange"
                        android:paddingBottom="@dimen/mini_border"
                        android:paddingEnd="@dimen/small_border"
                        android:paddingStart="@dimen/small_border"
                        android:paddingTop="@dimen/mini_border"
                        android:text="@string/medicine_plan"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/text_view_show_doc_consult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_marginEnd="@dimen/nano_border"
                        android:layout_marginStart="@dimen/nano_border"
                        android:background="@drawable/shape_for_show_doc_function_green"
                        android:paddingBottom="@dimen/mini_border"
                        android:paddingEnd="@dimen/small_border"
                        android:paddingStart="@dimen/small_border"
                        android:paddingTop="@dimen/mini_border"
                        android:text="@string/medicine_consult"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/text_view_show_doc_pri"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_marginEnd="@dimen/nano_border"
                        android:layout_marginStart="@dimen/nano_border"
                        android:background="@drawable/shape_for_show_doc_function_red"
                        android:paddingBottom="@dimen/mini_border"
                        android:paddingEnd="@dimen/small_border"
                        android:paddingStart="@dimen/small_border"
                        android:paddingTop="@dimen/mini_border"
                        android:text="@string/medicine_pri_add"
                        android:textColor="@color/white" />
                </LinearLayout>

            </HorizontalScrollView>

            <!-- 专业擅长 -->
            <LinearLayout
                android:id="@+id/layout_show_doc_profess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/shape_for_text_border"
                android:layout_marginTop="@dimen/small_border"
                app:layout_constraintTop_toBottomOf="@id/scroll_view_show_doc_function">

                <TextView
                    android:id="@+id/text_view_show_profess_title"
                    android:background="@drawable/shape_for_text_border"
                    android:drawableStart="@drawable/ic_profess"
                    android:padding="@dimen/mini_border"
                    android:paddingStart="@dimen/small_border"
                    android:paddingEnd="@dimen/small_border"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medicine_profess" />

                <TextView
                    android:id="@+id/text_view_show_profess_content"
                    android:layout_marginTop="@dimen/mini_border"
                    android:paddingTop="@dimen/mini_border"
                    android:paddingBottom="@dimen/mid_border"
                    android:paddingStart="@dimen/small_border"
                    android:paddingEnd="@dimen/small_border"
                    android:textSize="19sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medicine_profess" />

            </LinearLayout>

            <!-- 执业经历 -->
            <LinearLayout
                android:id="@+id/layout_show_doc_career"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/shape_for_text_border"
                android:layout_marginTop="@dimen/small_border"
                app:layout_constraintTop_toBottomOf="@id/layout_show_doc_profess">

                <TextView
                    android:id="@+id/text_view_show_career_title"
                    android:background="@drawable/shape_for_text_border"
                    android:drawableStart="@drawable/ic_career"
                    android:padding="@dimen/mini_border"
                    android:paddingStart="@dimen/small_border"
                    android:paddingEnd="@dimen/small_border"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medicine_career" />

                <TextView
                    android:id="@+id/text_view_show_career_content"
                    android:layout_marginTop="@dimen/mini_border"
                    android:paddingTop="@dimen/mini_border"
                    android:paddingBottom="@dimen/mid_border"
                    android:paddingStart="@dimen/small_border"
                    android:paddingEnd="@dimen/small_border"
                    android:textSize="19sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medicine_career" />
            </LinearLayout>

            <!-- 私人医生 -->
            <LinearLayout
                android:id="@+id/layout_show_doc_pri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/shape_for_text_border"
                android:layout_marginTop="@dimen/small_border"
                app:layout_constraintTop_toBottomOf="@id/layout_show_doc_career">

                <TextView
                    android:id="@+id/text_view_show_pri_title"
                    android:background="@drawable/shape_for_text_border"
                    android:drawableStart="@drawable/ic_pri_doc"
                    android:padding="@dimen/mini_border"
                    android:paddingStart="@dimen/small_border"
                    android:paddingEnd="@dimen/small_border"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medicine_pri" />

                <TextView
                    android:id="@+id/text_view_show_pri_content"
                    android:layout_marginTop="@dimen/mini_border"
                    android:paddingTop="@dimen/mini_border"
                    android:paddingBottom="@dimen/mid_border"
                    android:paddingStart="@dimen/small_border"
                    android:paddingEnd="@dimen/small_border"
                    android:textSize="19sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medicine_pri" />
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>